--- a/www/index.html
+++ b/www/index.html
@@ -1,15 +1,38 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
   <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
   <script src="components/loader.js"></script>
+  <script src="components/materialize.min.js"></script>
 
   <link rel="stylesheet" href="components/loader.css">
+  <link rel="stylesheet" href="css/materialize.min.css">
+  <link rel="stylesheet" href="components/icon.css">
+  <link rel="stylesheet" href="components/style.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-  
+
+<body class="amber lighten-4">
+
+  <nav>
+
+    <div class="nav-wrapper amber darken-4">
+      <a href="#" class="brand-logo center">Mapa</a>
+    </div>
+
+  </nav>
+
+  <section>
+
+    <div class="row center">
+      <a class="btn-floating btn-large waves-effect waves-light pulse amber darken-4" id="map"><i class="material-icons">map</i></a>
+    </div>
+    
+  </section>
+
 </body>
+
 </html>
