--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
   <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
   <script src="components/loader.js"></script>
+  <script src="components/jquery-3.4.1.min.js"></script>
   <script src="components/materialize.min.js"></script>
+
+  
+  <script src="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.js"></script>
+  <link type="text/css" rel="stylesheet" href="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.css"/>
+
+  <script src="components/acao.js"></script>
 
   <link rel="stylesheet" href="components/loader.css">
   <link rel="stylesheet" href="css/materialize.min.css">
@@ -28,10 +35,14 @@
   <section>
 
     <div class="row center">
-      <a class="btn-floating btn-large waves-effect waves-light pulse amber darken-4" id="map"><i class="material-icons">map</i></a>
+      <button class="btn-floating btn-large waves-effect waves-light pulse amber darken-4" id="click-map"><i class="material-icons">map</i></button>
     </div>
     
   </section>
+
+      <div style="border: 0; margin: 0;">
+      <div id="map" style="width: 100vw; height: 70vh;"></div>
+    </div>
 
 </body>
 
